Update .gitignore, modify navigation.yaml logo details, and add logo assets

--- a/content/en/data/navigation.yaml
+++ b/content/en/data/navigation.yaml
@@ -19,8 +19,8 @@ header:
       theme: pseudo
 
 logo:
-  icon: ''
-  text: 'Unico.rn.it'
+  icon: '/logo.svg'
+  text: 'Unicorn it'
 
 footer:
   underline:
