--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "npm run clean:all && next dev",
+    "dev": "npm run clean && next dev",
     "build": "npm run clean:all && next build",
     "dev:export": "EXPORT_MODE=true npm run clean && next dev",
     "build:export": "EXPORT_MODE=true npm run build && npm run sitemap && npm run postexport",
