--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "npm run clean && next dev",
-    "build": "npm run clean:all && next build",
+    "build": "npm run clean && next build",
     "dev:export": "EXPORT_MODE=true npm run clean && next dev",
     "build:export": "EXPORT_MODE=true npm run build && npm run sitemap && npm run postexport",
     "start": "next start",
