--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-final-form": "^6.5.8",
     "react-router-dom": "^6.2.1",
     "split2": "^4.1.0",
-    "ua-parser-js": "^1.0.2"
+    "ua-parser-js": "^1.0.2",
+    "webpack-assets-manifest": "^5.2.1"
   },
   "devDependencies": {
     "@gravity-ui/eslint-config": "^3.3.0",
@@ -87,7 +88,6 @@
     "typescript": "^4.8.4",
     "typograf": "^6.14.0",
     "url-loader": "^4.1.1",
-    "webpack-assets-manifest": "^5.2.1",
     "webpack-preprocessor-loader": "^1.3.0"
   },
   "husky": {
