--- a/content/en/pages/projects/contario.yaml
+++ b/content/en/pages/projects/contario.yaml
@@ -27,7 +27,7 @@ blocks:
     theme: 'light'
     leftContent:
       title: 'Video Creation Simplified'
-      text: 'Contario is a powerful service that transforms your static images and photos into dynamic, professional-quality videos. With our intuitive template system, you can create engaging content for social media, marketing, presentations, and more in just minutes, not hours.'
+      text: 'Contario is a powerful service that transforms your static images and photos into dynamic, professional-quality videos. With our intuitive template system, you can create engaging content for social media, marketing, presentations, and more in just minutes, not hours. Backed by Investment Company Temir (ICT), which is actively investing in the creation of Tech provider SaaS platforms for media production and social media management.'
     rightContent:
       title: 'Why Choose Contario'
       text: 'Our platform combines ease of use with powerful features, allowing anyone to create professional videos without technical skills or expensive software. From storage to direct social media publishing, we handle the entire workflow.'
